Use logo image in the og:image property

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,7 @@
       property="og:description"
       content="Create a useful TypeScript configuration file in two shakes!"
     />
-    <meta
-      property="og:image"
-      content="https://ts-generator.js.org/banner.png"
-    />
+    <meta property="og:image" content="https://ts-generator.js.org/logo.png" />
     <meta property="og:url" content="https://ts-generator.js.org" />
     <meta property="og:site_name" content="TypeScript Generator" />
     <meta name="twitter:card" content="summary" />
